# pdf-decompiler

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
