[project]
name = "pdf-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf (>=5.3.1,<6.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
